# RehabEdge-Vision.AI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default_zones.yaml  rehab_objects.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  BENCHMARKING.md  DEPLOYMENT_RPI.md  RESEARCH_NOTES.md  ROADMAP.md  SAFETY.md
rehabedge_vision/: __init__.py  core.py  inference.py  main.py
scripts/: export_yolo_openvino.sh  run_demo.sh  setup_pi.sh
systemd/: rehabedge.service
tests/: test_core.py
